--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,7 @@ $device-phone: "only screen and (max-width : 479px)";
 $device-tablet: "only screen and (min-width : 480px) and (max-width: 839px)";
 $device-tablet-and-desktop: "only screen and (min-width : 480px)";
 $device-desktop: "only screen and (min-width : 840px)";
+$main-font-color: #3f454a;
+$main-bg-color: #f5f8f9;
+$blue-color: #007ee5;
+$grey-color: #a6b0b7;
