--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -130,7 +130,8 @@
             .mdl-button {
                 color: $main-font-color;
                 border-radius: 0px;
-                height: 50px;
+                height: 43px;
+                padding-top: 7px;
                 font-size: 12px;
                 &.active {
                     border-bottom: 2px solid $blue-color;
