--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,14 @@ $main-font-color: #3f454a;
 $main-bg-color: #f5f8f9;
 $blue-color: #007ee5;
 $grey-color: #a6b0b7;
+@mixin descending-z-index($count: 30) {
+    $target: 0;
+    $index: $count;
+    @while $index>0 {
+        &:nth-child(#{$target}) {
+            z-index: #{$index};
+        }
+        $target: $target+1;
+        $index: $index - 1;
+    }
+}
