--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -142,6 +142,7 @@
             display: flex;
             justify-content: flex-end;
             align-items: center;
+            padding-left: 12px;
             @media #{$device-phone} {
                 justify-content: flex-start;
                 padding: 0px 0px 20px 16px;
@@ -158,6 +159,7 @@
             }
             .followers-count {
                 font-size: 12px;
+                white-space: nowrap;
                 &__text {
                     color: $grey-color;
                     padding-right: 18px;
